--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="delDialog">"Are you sure you want to delete this post?"</string>
     <string name="yes">Yes, Delete it!</string>
     <string name="no">No, Cancel</string>
+    <string name="update">Update</string>
 </resources>
