--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Journal App</string>
     <string name="action_settings">Settings</string>
-    <string name="write_your_thoughts">Write your thoughts...</string>
+    <string name="write_your_thoughts">Write your thoughts…</string>
     <string name="date_time"><![CDATA[Date & Time]]></string>
     <string name="my_post_here">My post here</string>
     <string name="no_posts_available_sorry">No posts available.. Sorry!</string>
@@ -9,4 +9,5 @@
     <string name="yes">Yes, Delete it!</string>
     <string name="no">No, Cancel</string>
     <string name="update">Update</string>
+    <string name="post_image">Post Image</string>
 </resources>
